# ChangeLog for dev-libs/qqwing
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/qqwing/ChangeLog,v 1.5 2015/03/15 13:18:50 pacho Exp $

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> qqwing-1.3.3.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> qqwing-1.3.3.ebuild:
  amd64 stable, bug 534012

  27 Jan 2015; Pacho Ramos <pacho@gentoo.org> qqwing-1.3.3.ebuild:
  x86 keyword, bug #533344

  30 Dec 2014; Markus Meier <maekke@gentoo.org> qqwing-1.3.3.ebuild:
  add ~arm, bug #533344

*qqwing-1.3.3 (22 Dec 2014)

  22 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> +qqwing-1.3.3.ebuild,
  +files/qqwing-1.3.0-autotools.patch, +metadata.xml:
  Initial ebuild. Required by >=games-puzzle/gnome-sudoku-3.14.