@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX qqwing-1.3.0-autotools.patch 5417 SHA256 dcba7d9267b719bdbf56925271af8010cc4778fce1c60b9a17d8b71665b43b16 SHA512 cdb88b9a07cf5c68790c4ce7e6f1156dff4c985c0f65bd73f81556d41570be5789d8fce53594bcd698fdf182dfa0f88618f49fbdaee153b5dcb4c833553ff515 WHIRLPOOL 8f7161b13027d876f7fdef1e49f29a9902b36031023a8210f4f1aca3e5fd04a4b6305514dae7fee515c4ed7d02fe756029467d0fdfa3ead45d4bf8f5fdb0988a
 DIST qqwing-1.3.3.tar.gz 89629 SHA256 e037748255d821439dfef9fb4bae2969e7ea600bb4e4cb0a0c1d7bc7883c596e SHA512 cce6e3122f0620b4a27f5c4186b468906006b6f9deda0b3fc474d40e678722bbb07474c479a75cbcac0812a097e5be4d7ae58339810a897f966d5a73b07a6833 WHIRLPOOL c5cfd0779faeee57cf760d8c94c37ae2343c156781c07320cf68c51a3dfe67d3c0f5bf8b077c33a88dc1e217ae742bb130f4a70b1ff96205427158232f867b76
+DIST qqwing-1.3.4.tar.gz 352060 SHA256 1753736c31feea0085f5cfac33143743204f8a7e66b81ccd17e249ecafba802f SHA512 6762b97d7595e7831edb80d9fac06ca784c6dfb6c5717e72adaac6973ec94bec417806f8ae4b80ed95b876388c8c1a00906b0fa8653a115998c5170db25aab0d WHIRLPOOL 9d491ad8e7ad9afbc3376f35f63b1b956750a5fc41fa2cd34c07ee8b897b81c8dbddd9edac60acfbbd325bfe1872e3819f2901b94b1a2a9ca2bce44c8da7685a
 EBUILD qqwing-1.3.3.ebuild 642 SHA256 8502475ce70be962b6cfec00861867b4081cbf6c832b8927f3590e18c0f03802 SHA512 9b741b390cee54e62585d80a00e2884ea4ef06721a026fec5e5ac846ecf80f96b98b4cb016e8375bd4bc2f29cc5e3eee476f8ca95bdc415e0c58cd8ba61b52e9 WHIRLPOOL 92c374b267183967c746e496d3e5212c428ec087dfc2d3c7e6e9f1f5f4e38a491a7d5f99f959bee6ebae848215d3484ae12d376e9c93b1094050364b2175c145
-MISC ChangeLog 802 SHA256 093a2d50b644e8924d297c051563cca28709321f52b223bd9f3e6f02a012d913 SHA512 43d5ea92c5b970498e9d108f219b4dc193a21727386a2c25e0a74d1f38498b33c9c05c481209cb0d06e5a02352d48a8bd5535142e3df3bc04a2f9b7bfe4b3377 WHIRLPOOL fbd7b4cfef977791ae0c2c04b43eb5d2f962f7248a1bfc96ef55c671df86b78a8416f5b09db0149c652396887dee859d4273bae2db27d3ac98165609dfa2f440
+EBUILD qqwing-1.3.4.ebuild 514 SHA256 8d2da0757829a44e0fbb99c827e9d53949e608edf5fccce6a0b65b70fe4e04c2 SHA512 d4048ec369333a3d3a8eac405b3b2662f93bf239f0280dd7bf9502017a74e1c04a76ef34a9ebe651dd8833efa705d680c2b41ea15e78cbdcaae560494e843b87 WHIRLPOOL b019c4927df31744201e0dda98e340641bd5a287388acb1bf88cecec216a0c4d6175043835a9536075409eabfc045f5ce44671e58ee9aec9da3ce81c1fdd6857
+MISC ChangeLog 922 SHA256 7218e15104198eaafea86756247befcd6500756fe83f7519258e721a6eb4c8d2 SHA512 4194e4f68a5b8a371af550e80d9849f1915591689e8a93cc8d849e241c6d6beda05ce6c47d97f6503a16b8322451a9d84609a51378235ca6dcb94066e9048df1 WHIRLPOOL 7dde071996a08a1062a3fe8b8ed9077d58a137667e81a61abad23f849f255339224d8e548a3f63457b6c461d7b01297a367512a0cd8f155b8516509b0d6379ad
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUFhqwACgkQCaWpQKGI+9RfOgCfYKQU1YjrfJ/oNDkNH0w9FB7O
-jMwAnRHqQAFXPj/dBY622LCcZsZfI+Lv
-=dDRe
+iEYEAREIAAYFAlVh2VkACgkQ1fmVwcYIWAZilwCfUPgzD8fRdvXjrNtTeeE34lba
++5UAoLY1AYKGpjM1DH51a2y+oW+E0BIO
+=Bx6D
 -----END PGP SIGNATURE-----
