@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/qqwing
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/qqwing/ChangeLog,v 1.5 2015/03/15 13:18:50 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/qqwing/ChangeLog,v 1.6 2015/05/24 13:59:52 eva Exp $
+
+*qqwing-1.3.4 (24 May 2015)
+
+  24 May 2015; Gilles Dartiguelongue <eva@gentoo.org> +qqwing-1.3.4.ebuild:
+  Version bump.
 
   15 Mar 2015; Pacho Ramos <pacho@gentoo.org> qqwing-1.3.3.ebuild:
   x86 stable, bug 534012
